--- a/RevertCord.css
+++ b/RevertCord.css
@@ -4,6 +4,7 @@
 @import url("https://minidiscordthemes.github.io/Snippets/PrivacyScreen/main.css");
 @import url("https://minidiscordthemes.github.io/Snippets/ProfileBannerHeight/main.css");
 @import url("https://minidiscordthemes.github.io/Snippets/ClippyStatus/main.css");
+@import url("https://ukriu.github.io/cssCord/Other/blandProfile.css");
 @import url(https://overimagine1.github.io/old-discord-font/source.css);
 
 :root {
